WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116094
[Qt][Win] Input events aren't mapped properly with windowless plugins.
https://bugs.webkit.org/show_bug.cgi?id=116094
Summary
[Qt][Win] Input events aren't mapped properly with windowless plugins.
Jocelyn Turcotte
Reported
2013-05-14 01:56:41 PDT
[Qt][Win] Input events aren't mapped properly with windowless plugins.
Attachments
Patch
(10.42 KB, patch)
2013-05-14 02:00 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2013-05-14 02:00:06 PDT
Created
attachment 201689
[details]
Patch
WebKit Commit Bot
Comment 2
2013-05-14 02:01:38 PDT
Attachment 201689
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/qt/QWebPageClient.h', u'Source/WebCore/plugins/win/PluginViewWin.cpp', u'Source/WebKit/qt/ChangeLog', u'Source/WebKit/qt/WidgetSupport/PageClientQt.cpp', u'Source/WebKit/qt/WidgetSupport/PageClientQt.h']" exit_code: 1 Source/WebCore/plugins/win/PluginViewWin.cpp:350: Do not add platform specific code in WebCore outside of platform. [build/webcore_platform_layering_violation] [5] Source/WebCore/plugins/win/PluginViewWin.cpp:362: Do not add platform specific code in WebCore outside of platform. [build/webcore_platform_layering_violation] [5] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jocelyn Turcotte
Comment 3
2013-05-14 02:08:39 PDT
(In reply to
comment #2
)
> Source/WebCore/plugins/win/PluginViewWin.cpp:350: Do not add platform specific code in WebCore outside of platform. [build/webcore_platform_layering_violation] [5]
Source/WebCore/plugins subdirectories would need to be merged with those in Source/WebCore/platform. Hopefully we can land this patch first.
Tor Arne Vestbø
Comment 4
2013-05-27 05:10:48 PDT
Comment on
attachment 201689
[details]
Patch lgtm
WebKit Commit Bot
Comment 5
2013-05-27 05:32:47 PDT
Comment on
attachment 201689
[details]
Patch Clearing flags on attachment: 201689 Committed
r150749
: <
http://trac.webkit.org/changeset/150749
>
WebKit Commit Bot
Comment 6
2013-05-27 05:32:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug